compiler/src/test/resources/amyc/typer/failing/EqualityError.amy
object Equality
  abstract class Foo
  case class Bar(i: Int) extends Foo
  1 == Bar(2)
end Equality
